--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,27 @@
-/.phpunit.cache
+# Laravel & PHP
+/vendor
 /node_modules
-/public/build
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
+/.phpunit.result.cache
+/.phpunit.cache
 .env
-.env.backup
-.env.production
-.phpunit.result.cache
+.env.*
 Homestead.json
 Homestead.yaml
 auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
+
+# IDE & Editor
 /.idea
 /.vscode
+/.fleet
+
+# Build & Compiled
+/public/build
+npm-debug.log
+yarn-error.log
+
+# OS specific
+.DS_Store
+Thumbs.db
